# geoms

./: Cargo.toml  README.md
.github/workflows/: CI.yml  rustdocs.yml
src/: lib.rs
src/d2/: mod.rs
