[package]
name = "geoms"
version = "0.0.1"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]
license = "MIT"
repository = "https://github.com/connorpower/geoms/"
description = "Optimized geometry primitives for Microsoft platforms with the same memory layout as DirectX and Direct2D and types"
keywords = [
    "DirectX",
    "Direct2D",
    "geometry",
    "2D",
    "Win32",
]
categories = [
    "rendering",
    "graphics",
]

[features]
default = []
# Enables conversions to and from Win32 foundational geometry types.
win32 = ["windows/Win32_Foundation"]
# Enables conversions to and from Direct2D geometry types.
d2d = ["windows/Win32_Graphics_Direct2D_Common"]
# Enables nightly-specific optional features for documentation.
nightly = []

# docs.rs-specific configuration to enable nightly documentation features.
[package.metadata.docs.rs]
all-features = true

[dependencies]
num-traits = "0.2.15"

[dependencies.windows]
version = "0.42.0"
optional = true

[dev-dependencies]
pretty_assertions = "1.3.0"
